# disc_storage

./: Cargo.toml
src/: config.rs  main.rs
src/compress/: lzma_compress.rs  mod.rs  zstd_compress.rs
src/discord/: mod.rs
