[package]
name = "disc_storage"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.28.1"
egui_dock = "0.13.0"
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.22"
rfd = "0.14.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
# serenity = "0.12.2"
tar = "0.4.41"
tokio = "1.39.3"
walkdir = "2.5.0"
xz2 = { version = "0.1.6", features = ["tokio"] }
zstd = "0.13.2"
